# robot_devkit

./: .gitignore  README.md  docker-compose.yml  rdk.sh  rdk_install.sh  realsense_install.sh
demo/: rdk_install.sh
realsense2-nav/cmd_vel_relay/: CMakeLists.txt  package.xml
realsense2-nav/cmd_vel_relay/src/: cmd_vel_forwarder.cpp
realsense2-nav/realsense2_nav/: CMakeLists.txt  package.xml
realsense2-nav/realsense2_nav/config/: config.yml  nav2_params.yaml  rs_cartographer.lua
realsense2-nav/realsense2_nav/description/: bot_desc.urdf
realsense2-nav/realsense2_nav/launch/: autonomy_launch.py
realsense2-ros2-vslam/realsense2_camera/launch/: rs_cartographer.lua  rs_d400_and_t265_launch.py  rs_multi_camera_launch.py
realsense2_camera_modified/config/: rs_cartographer.rviz
realsense2_camera_modified/launch/: rs_d400_and_t265_launch.py  rs_launch.py
scripts/: environment_setup.sh  environment_setup_binary.sh  install_deps.sh  sync_src.sh
